# graphics-ray-tracing

./: .gitignore  CMakeLists.txt  README.md  image.ppm
render/: cornellbox.ppm
src/: CMakeLists.txt  main.cpp  ref  ref.cpp
src/io/: bvh.cpp  bvh.h  scene.cpp  scene.h
src/raytracer/: cfg.h  raytracer.cpp  raytracer.h  utils.h
src/utils/: AABB.h  cfg.h  ray.h  utils.cpp  utils.h
